--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-test
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <h1 class="h1">TEST</h1>
+
+</body>
+</html>
